--- a/SDL_CreateThread.mediawiki
+++ b/SDL_CreateThread.mediawiki
@@ -17,7 +17,7 @@ SDL_Thread* SDL_CreateThread(SDL_ThreadFunction fn,
 == Function Parameters ==
 {|
 |'''fn''' 
-|^The function to be run in the new thread, see remarks for details.^ 
+|^The function to be run in the new thread, see [[#Remarks|remarks]] for details.^ 
 |-
 |'''data''' 
 |a void* user context parameter ''-and/or-'' <code>passed directly to the thread function</code> ''-or-'' ^a pointer to the data to be passed to the function in the new thread^ 
@@ -25,13 +25,62 @@ SDL_Thread* SDL_CreateThread(SDL_ThreadFunction fn,
 
 
 == Return Value ==
-Returns the new thread pointer. This is a pointer to an SDL defined device independent thread information structure. The returned thread pointer will be used for any subsuequent calls to manage this thread.
+Returns the new thread pointer on success, NULL if the new thread could not be created. This is a pointer to an SDL defined device independent thread information structure. The returned thread pointer will be used for any subsuequent calls to manage this thread.
 
 <<Color2(green,Should it be mentioned here that the function '''fn''' itself returns an int or is it sufficient to note that in the Remarks?)>>
 
 == Code Examples ==
 ```c++
-You can add your code example here
+#include <stdio.h>
+#include <SDL_thread.h>
+#include <SDL_timer.h>
+
+int TestThread( void *ptr );
+
+int main(int argc, char *argv[])
+{
+        SDL_Thread      *thread;
+
+         printf("\nSimple SDL_CreateThread test:");
+
+        // Simply create a thread
+        thread = SDL_CreateThread( TestThread, (void *)NULL);
+        if( NULL == thread )
+           printf("\nSDL_CreateThread failed: %s\n", SDL_GetError());
+        else
+           SDL_Delay(1000);
+
+        return 1;
+}
+
+// Very simple thread - counts 0 to 9 delaying 50ms between increments
+int TestThread( void *ptr )
+{
+        int     cnt;
+
+        for(cnt=0;cnt<10;cnt++)
+        {
+                printf( "\nThread counter: %d", cnt);
+                SDL_Delay(50);
+        }
+
+        return 1;
+}
+```
+```
+Output:
+
+Simple SDL_CreateThread test:
+Thread counter: 0
+Thread counter: 1
+Thread counter: 2
+Thread counter: 3
+Thread counter: 4
+Thread counter: 5
+Thread counter: 6
+Thread counter: 7
+Thread counter: 8
+Thread counter: 9
 ```
 == Remarks ==
 *<br/>[[SDL_CreateThread]]() creates a new thread of execution that shares all of its parent's global memory, signal handlers, file descriptors, etc, and runs the function '''fn''', passing it the void pointer '''data'''.  The thread quits when '''fn''' returns. <br/>*
