--- a/SDL_HINT_RENDER_OPENGL_SHADERS.mediawiki
+++ b/SDL_HINT_RENDER_OPENGL_SHADERS.mediawiki
@@ -16,7 +16,7 @@ A hint that specifies a variable controlling whether the OpenGL render driver us
 |}
 
 == Default ==
-By default shaders are used if OpenGL supports them
+By default shaders are used if OpenGL supports them.
 
 == Code Examples ==
 ```c++
