update content - use S&K include for value

--- a/SDL_Keycode.mediawiki
+++ b/SDL_Keycode.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_Keycode =
@@ -7,720 +7,15 @@ The SDL virtual key representation.
 
 
 == Values ==
-{|
-|SDLK_UNKNOWN
-|0
-|-
-|SDLK_RETURN
-|the Enter key (main keyboard)
-|-
-|SDLK_ESCAPE
-|the Esc key
-|-
-|SDLK_TAB
-|the Tab key
-|-
-|SDLK_CAPSLOCK
-|the Caps Lock key
-|-
-|SDLK_LSHIFT
-|the Left Shift key
-|-
-|SDLK_LCTRL
-|the Left Control key
-|-
-|SDLK_LGUI
-|the Left GUI key
-|-
-|SDLK_LALT
-|the Left Alt key
-|-
-|SDLK_SPACE
-|the Space Bar key(s)
-|-
-|SDLK_RALT
-|the Right Alt key
-|-
-|SDLK_RGUI
-|the Right GUI key
-|-
-|SDLK_APPLICATION
-|the Application / Contextual Menu key (Windows)
-|-
-|SDLK_RCTRL
-|the Right Control key
-|-
-|SDLK_RSHIFT
-|the Right Shift key
-|-
-|SDLK_BACKQUOTE
-|the ` key
-|-
-|SDLK_EXCLAIM
-|the ! key
-|-
-|SDLK_AT
-|the @ key
-|-
-|SDLK_HASH
-|the # key
-|-
-|SDLK_DOLLAR
-|the $ key
-|-
-|SDLK_PERCENT
-|the % key
-|-
-|SDLK_CARET
-|the ^ key
-|-
-|SDLK_AMPERSAND
-|the & key
-|-
-|SDLK_ASTERISK
-|the * key
-|-
-|SDLK_LEFTPAREN
-|the ( key
-|-
-|SDLK_RIGHTPAREN
-|the ) key
-|-
-|SDLK_MINUS
-|the - key
-|-
-|SDLK_EQUALS
-|the = key
-|-
-|SDLK_BACKSPACE
-|the Back Space key
-|-
-|SDLK_UNDERSCORE
-|the _ key
-|-
-|SDLK_PLUS
-|the + key
-|-
-|SDLK_LEFTBRACKET
-|the [ key
-|-
-|SDLK_RIGHTBRACKET
-|the ] key
-|-
-|SDLK_SEMICOLON
-|the ; key
-|-
-|SDLK_QUOTE
-|the ' key
-|-
-|SDLK_COLON
-|the : key
-|-
-|SDLK_QUOTEDBL
-|the " key
-|-
-|SDLK_COMMA
-|the , key
-|-
-|SDLK_PERIOD
-|the . key
-|-
-|SDLK_SLASH
-|the / key
-|-
-|SDLK_BACKSLASH
-|the \ key
-|-
-|SDLK_LESS
-|the < key
-|-
-|SDLK_GREATER
-|the > key
-|-
-|SDLK_QUESTION
-|the ? key
-|-
-|SDLK_0
-|the 0 key
-|-
-|SDLK_1
-|the 1 key
-|-
-|SDLK_2
-|the 2 key
-|-
-|SDLK_3
-|the 3 key
-|-
-|SDLK_4
-|the 4 key
-|-
-|SDLK_5
-|the 5 key
-|-
-|SDLK_6
-|the 6 key
-|-
-|SDLK_7
-|the 7 key
-|-
-|SDLK_8
-|the 8 key
-|-
-|SDLK_9
-|the 9 key
-|-
-|SDLK_a
-|the a key
-|-
-|SDLK_b
-|the b key
-|-
-|SDLK_c
-|the c key
-|-
-|SDLK_d
-|the d key
-|-
-|SDLK_e
-|the e key
-|-
-|SDLK_f
-|the f key
-|-
-|SDLK_g
-|the g key
-|-
-|SDLK_h
-|the h key
-|-
-|SDLK_i
-|the i key
-|-
-|SDLK_j
-|the j key
-|-
-|SDLK_k
-|the k key
-|-
-|SDLK_l
-|the l key
-|-
-|SDLK_m
-|the m key
-|-
-|SDLK_n
-|the n key
-|-
-|SDLK_o
-|the o key
-|-
-|SDLK_p
-|the p key
-|-
-|SDLK_q
-|the q key
-|-
-|SDLK_r
-|the r key
-|-
-|SDLK_s
-|the s key
-|-
-|SDLK_t
-|the t key
-|-
-|SDLK_u
-|the u key
-|-
-|SDLK_v
-|the v key
-|-
-|SDLK_w
-|the w key
-|-
-|SDLK_x
-|the x key
-|-
-|SDLK_y
-|the y key
-|-
-|SDLK_z
-|the z key
-|-
-|SDLK_F1
-|the F1 key
-|-
-|SDLK_F2
-|the F2 key
-|-
-|SDLK_F3
-|the F3 key
-|-
-|SDLK_F4
-|the F4 key
-|-
-|SDLK_F5
-|the F5 key
-|-
-|SDLK_F6
-|the F6 key
-|-
-|SDLK_F7
-|the F7 key
-|-
-|SDLK_F8
-|the F8 key
-|-
-|SDLK_F9
-|the F9 key
-|-
-|SDLK_F10
-|the F10 key
-|-
-|SDLK_F11
-|the F11 key
-|-
-|SDLK_F12
-|the F12 key
-|-
-|SDLK_PRINTSCREEN
-|the Print Screen key
-|-
-|SDLK_SCROLLLOCK
-|the Scroll Lock key
-|-
-|SDLK_PAUSE
-|the Pause / Break key
-|-
-|SDLK_SYSREQ
-|the !SysReq key
-|-
-|SDLK_INSERT
-|the Insert key
-|-
-|SDLK_DELETE
-|the Delete key
-|-
-|SDLK_HOME
-|the Home key
-|-
-|SDLK_END
-|the End key
-|-
-|SDLK_PAGEUP
-|the Page Up key
-|-
-|SDLK_PAGEDOWN
-|the Page Down key
-|-
-|SDLK_LEFT
-|the Left arrow key (navigation keypad)
-|-
-|SDLK_RIGHT
-|the Right arrow key (navigation keypad)
-|-
-|SDLK_UP
-|the Up arrow key (navigation keypad)
-|-
-|SDLK_DOWN
-|the Down arrow key (navigation keypad)
-|-
-|SDLK_POWER
-|the Power key
-|-
-|SDLK_SLEEP
-|the Sleep key
-|-
-|SDLK_NUMLOCKCLEAR
-|the Num Lock key (PC) / the Clear key (Mac)
-|-
-|SDLK_KP_DIVIDE
-|the / key (numeric keypad)
-|-
-|SDLK_KP_MULTIPLY
-|the * key (numeric keypad)
-|-
-|SDLK_KP_MINUS
-|the - key (numeric keypad)
-|-
-|SDLK_KP_PLUS
-|the + key (numeric keypad)
-|-
-|SDLK_KP_ENTER
-|the Enter key (numeric keypad)
-|-
-|SDLK_KP_1
-|the 1 key (numeric keypad)
-|-
-|SDLK_KP_2
-|the 2 key (numeric keypad)
-|-
-|SDLK_KP_3
-|the 3 key (numeric keypad)
-|-
-|SDLK_KP_4
-|the 4 key (numeric keypad)
-|-
-|SDLK_KP_5
-|the 5 key (numeric keypad)
-|-
-|SDLK_KP_6
-|the 6 key (numeric keypad)
-|-
-|SDLK_KP_7
-|the 7 key (numeric keypad)
-|-
-|SDLK_KP_8
-|the 8 key (numeric keypad)
-|-
-|SDLK_KP_9
-|the 9 key (numeric keypad)
-|-
-|SDLK_KP_0
-|the 0 key (numeric keypad)
-|-
-|SDLK_KP_PERIOD
-|the . key (numeric keypad)
-|-
-|SDLK_F13
-|the F13 key
-|-
-|SDLK_F14
-|the F14 key
-|-
-|SDLK_F15
-|the F15 key
-|-
-|SDLK_F16
-|the F16 key
-|-
-|SDLK_F17
-|the F17 key
-|-
-|SDLK_F18
-|the F18 key
-|-
-|SDLK_F19
-|the F19 key
-|-
-|SDLK_F20
-|the F20 key
-|-
-|SDLK_F21
-|the F21 key
-|-
-|SDLK_F22
-|the F22 key
-|-
-|SDLK_F23
-|the F23 key
-|-
-|SDLK_F24
-|the F24 key
-|-
-|SDLK_EXECUTE
-|the Execute key
-|-
-|SDLK_HELP
-|the Help key
-|-
-|SDLK_MENU
-|the Menu key
-|-
-|SDLK_SELECT
-|the Select key
-|-
-|SDLK_STOP
-|the Stop key
-|-
-|SDLK_AGAIN
-|the Again key
-|-
-|SDLK_UNDO
-|the Undo key
-|-
-|SDLK_CUT
-|the Cut key
-|-
-|SDLK_COPY
-|the Copy key
-|-
-|SDLK_PASTE
-|the Paste key
-|-
-|SDLK_FIND
-|the Find key
-|-
-|SDLK_MUTE
-|the Mute key
-|-
-|SDLK_VOLUMEUP
-|the Volume Up key
-|-
-|SDLK_VOLUMEDOWN
-|the Volume Down key
-|-
-|SDLK_ALTERASE
-|the Alt Erase key
-|-
-|SDLK_CANCEL
-|the Cancel key
-|-
-|SDLK_CLEAR
-|the Clear key
-|-
-|SDLK_PRIOR
-|the Prior key
-|-
-|SDLK_RETURN2
-|the Return2 key
-|-
-|SDLK_SEPARATOR
-|the Separator key
-|-
-|SDLK_OUT
-|the Out key
-|-
-|SDLK_OPER
-|the Oper key
-|-
-|SDLK_CLEARAGAIN
-|the Clear Again key
-|-
-|SDLK_CRSEL
-|the Cr<code></code>Sel key
-|-
-|SDLK_EXSEL
-|the Ex<code></code>Sel key
-|-
-|SDLK_THOUSANDSSEPARATOR
-|the Thousands Separator key
-|-
-|SDLK_DECIMALSEPARATOR
-|the Decimal Separator key
-|-
-|SDLK_CURRENCYUNIT
-|the Currency Unit key
-|-
-|SDLK_CURRENCYSUBUNIT
-|the Currency Subunit key
-|-
-|SDLK_KP_EQUALS
-|the = key (numeric keypad)
-|-
-|SDLK_KP_COMMA
-|the Comma key (numeric keypad)
-|-
-|SDLK_KP_EQUALSAS400
-|the Equals AS400 key (numeric keypad)
-|-
-|SDLK_KP_00
-|the 00 key (numeric keypad)
-|-
-|SDLK_KP_000
-|the 000 key (numeric keypad)
-|-
-|SDLK_KP_LEFTPAREN
-|the Left Parenthesis key (numeric keypad)
-|-
-|SDLK_KP_RIGHTPAREN
-|the Right Parenthesis key (numeric keypad)
-|-
-|SDLK_KP_LEFTBRACE
-|the Left Brace key (numeric keypad)
-|-
-|SDLK_KP_RIGHTBRACE
-|the Right Brace key (numeric keypad)
-|-
-|SDLK_KP_TAB
-|the Tab key (numeric keypad)
-|-
-|SDLK_KP_BACKSPACE
-|the Backspace key (numeric keypad)
-|-
-|SDLK_KP_A
-|the A key (numeric keypad)
-|-
-|SDLK_KP_B
-|the B key (numeric keypad)
-|-
-|SDLK_KP_C
-|the C key (numeric keypad)
-|-
-|SDLK_KP_D
-|the D key (numeric keypad)
-|-
-|SDLK_KP_E
-|the E key (numeric keypad)
-|-
-|SDLK_KP_F
-|the F key (numeric keypad)
-|-
-|SDLK_KP_XOR
-|the XOR key (numeric keypad)
-|-
-|SDLK_KP_POWER
-|the Power key (numeric keypad)
-|-
-|SDLK_KP_PERCENT
-|the Percent key (numeric keypad)
-|-
-|SDLK_KP_LESS
-|the Less key (numeric keypad)
-|-
-|SDLK_KP_GREATER
-|the Greater key (numeric keypad)
-|-
-|SDLK_KP_AMPERSAND
-|the & key (numeric keypad)
-|-
-|SDLK_KP_DBLAMPERSAND
-|the && key (numeric keypad)
-|-
-|SDLK_KP_VERTICALBAR
-|the <code>|</code> key (numeric keypad)
-|-
-|SDLK_KP_DBLVERTICALBAR
-|the <code>
-|</code> key (numeric keypad)
-|-
-|SDLK_KP_COLON
-|the : key (numeric keypad)
-|-
-|SDLK_KP_HASH
-|the # key (numeric keypad)
-|-
-|SDLK_KP_SPACE
-|the Space key (numeric keypad)
-|-
-|SDLK_KP_AT
-|the @ key (numeric keypad)
-|-
-|SDLK_KP_EXCLAM
-|the ! key (numeric keypad)
-|-
-|SDLK_KP_MEMSTORE
-|the Mem Store key (numeric keypad)
-|-
-|SDLK_KP_MEMRECALL
-|the Mem Recall key (numeric keypad)
-|-
-|SDLK_KP_MEMCLEAR
-|the Mem Clear key (numeric keypad)
-|-
-|SDLK_KP_MEMADD
-|the Mem Add key (numeric keypad)
-|-
-|SDLK_KP_MEMSUBTRACT
-|the Mem Subtract key (numeric keypad)
-|-
-|SDLK_KP_MEMMULTIPLY
-|the Mem Multiply key (numeric keypad)
-|-
-|SDLK_KP_MEMDIVIDE
-|the Mem Divide key (numeric keypad)
-|-
-|SDLK_KP_PLUSMINUS
-|the +/- key (numeric keypad)
-|-
-|SDLK_KP_CLEAR
-|the Clear key (numeric keypad)
-|-
-|SDLK_KP_CLEARENTRY
-|the Clear Entry key (numeric keypad)
-|-
-|SDLK_KP_BINARY
-|the Binary key (numeric keypad)
-|-
-|SDLK_KP_OCTAL
-|the Octal key (numeric keypad)
-|-
-|SDLK_KP_DECIMAL
-|the Decimal key (numeric keypad)
-|-
-|SDLK_KP_HEXADECIMAL
-|the Hexadecimal key (numeric keypad)
-|-
-|SDLK_MODE
-|the Mode key
-|-
-|SDLK_AUDIONEXT
-|the Audio Next key
-|-
-|SDLK_AUDIOPREV
-|the Audio Previous key
-|-
-|SDLK_AUDIOSTOP
-|the Audio Stop key
-|-
-|SDLK_AUDIOPLAY
-|the Audio Play key
-|-
-|SDLK_AUDIOMUTE
-|the Audio Mute key
-|-
-|SDLK_MEDIASELECT
-|the Media Select key
-|-
-|SDLK_EJECT
-|the Eject key
-|-
-|SDLK_WWW
-|the WWW/World Wide Web key
-|-
-|SDLK_MAIL
-|the Mail/eMail key
-|-
-|SDLK_CALCULATOR
-|the Calculator key
-|-
-|SDLK_COMPUTER
-|the My Computer key
-|-
-|SDLK_AC_SEARCH
-|the Search key (application control keypad)
-|-
-|SDLK_AC_HOME
-|the Home key (application control keypad)
-|-
-|SDLK_AC_BACK
-|the Back key (application control keypad)
-|-
-|SDLK_AC_FORWARD
-|the Forward key (application control keypad)
-|-
-|SDLK_AC_STOP
-|the Stop key (application control keypad)
-|-
-|SDLK_AC_REFRESH
-|the Refresh key (application control keypad)
-|-
-|SDLK_AC_BOOKMARKS
-|the Bookmarks key (application control keypad)
-|-
-|SDLK_BRIGHTNESSDOWN
-|the Brightness Down key
-|-
-|SDLK_BRIGHTNESSUP
-|the Brightness Up key
-|-
-|SDLK_DISPLAYSWITCH
-|the Display Switch key
-|-
-|SDLK_KBDILLUMTOGGLE
-|the Keyboard Illumination Toggle key
-|-
-|SDLK_KBDILLUMDOWN
-|the Keyboard Illumination Down key
-|-
-|SDLK_KBDILLUMUP
-|the keyboard Illumination Up key
-|}
+<<Include(SDL_ScancodeAndKeycode, , , from="Start include here.", to="##End Include here")>>
 
 == Code Examples ==
 ```c++
-You can add your code example here
+  //checks if a key is being remapped and prints what the remapping is
+  if(event->key.keysym.scancode != SDL_GetScancodeFromKey(event->key.keysym.sym))
+    printf("Physical %s key acting as %s key",
+      SDL_GetScancodeName(event->key.keysym.scancode),
+      SDL_GetKeyName(event->key.keysym.sym));
 ```
 
 == Remarks ==
@@ -728,7 +23,11 @@ You can add your code example here
 
 ,,Values of this type are used to represent keyboard keys using the current layout of the keyboard.  ,,These values include Unicode values representing the unmodified character that would be generated by pressing the key, or other constants for those keys that do not generate characters.
 
-<<Color2(green,Does SDL use a default layout for SDL_Keycode?  Is it platform-specific?  Are other layouts available or do they have to be created by the user/programmer?  Are they automatically detected or manually set?)>> <<Color2(blue,These are defined in include/SDL_keysym.h and are generally set to the ASCII value associated with the key or whatever SDL_SCANCODE_TO_KEYCODE returns for that key which is the SDL_Scancode with the 30th bit set.)>>
+<!-- Does SDL use a default layout for SDL_Keycode?  Is it platform-specific?  Are other layouts available or do they have to be created by the user/programmer?  Are they automatically detected or manually set?)>> <<Color2(blue,These are defined in include/SDL_keysym.h and are generally set to the ASCII value associated with the key or whatever SDL_SCANCODE_TO_KEYCODE returns for that key which is the SDL_Scancode with the 30th bit set. -->
+
+To look up a scancode or keycode by decimal or hexadecimal value you can use the following tables:
+:[[SDLScancodeLookup|SDL Scancode Lookup Table]]
+:[[SDLKeycodeLookup|SDL Keycode Lookup Table]]
 
 == Related Enumerations ==
 :[[SDL_Scancode]]
