update content - w/ Sam; remove draft

--- a/SDL_HINT_RENDER_DRIVER.mediawiki
+++ b/SDL_HINT_RENDER_DRIVER.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_HINT_RENDER_DRIVER =
-A hint that specifies a variable specifying which render driver to use.
+A hint that specifies which render driver to use.
 
 
 == Values ==
@@ -20,7 +19,7 @@ A hint that specifies a variable specifying which render driver to use.
 |}
 
 == Default ==
-By default ,,the default varies by platform, but it's,, the first one in the list that is available on the current platform ^is chosen^.
+By default the first one in the list that is available on the current platform is chosen.
 
 == Code Examples ==
 ```c++
@@ -28,7 +27,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-The variables are case-insensitive.
+The values are case-insensitive.
 
 If the application doesn't pick a specific renderer to use, this variable specifies the name of the preferred renderer.  If the preferred renderer can't be initialized, the normal default renderer is used.
 
