--- a/SDL_HINT_RENDER_OPENGL_SHADERS.mediawiki
+++ b/SDL_HINT_RENDER_OPENGL_SHADERS.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_HINT_RENDER_OPENGL_SHADERS =
-A hint that specifies a variable controlling whether the OpenGL render driver uses shaders if they are available.
+A hint that specifies whether the OpenGL render driver uses shaders.
 
 
 == Values ==
@@ -12,7 +12,7 @@ A hint that specifies a variable controlling whether the OpenGL render driver us
 |disable shaders
 |-
 |1
-|enable shaders
+|enable shaders, if they are available
 |}
 
 == Default ==
