update content - w/ Sam

--- a/SDL_HintPriority.mediawiki
+++ b/SDL_HintPriority.mediawiki
@@ -9,13 +9,13 @@ An enumeration of hint priorities.
 == Values ==
 {|
 |SDL_HINT_DEFAULT
-|description
+|low priority, used for default values
 |-
 |SDL_HINT_NORMAL
-|description
+|medium priority, 
 |-
 |SDL_HINT_OVERRIDE
-|description
+|high priority
 |}
 
 == Code Examples ==
