--- a/SDL_HintPriority.mediawiki
+++ b/SDL_HintPriority.mediawiki
@@ -12,7 +12,7 @@ An enumeration of hint priorities.
 |low priority, used for default values
 |-
 |SDL_HINT_NORMAL
-|medium priority, 
+|medium priority
 |-
 |SDL_HINT_OVERRIDE
 |high priority
