--- a/SDL_CreateThread.mediawiki
+++ b/SDL_CreateThread.mediawiki
@@ -40,15 +40,20 @@ int TestThread( void *ptr );
 int main(int argc, char *argv[])
 {
         SDL_Thread *thread;
+        int         threadReturnValue;
 
         printf("\nSimple SDL_CreateThread test:");
 
         // Simply create a thread
         thread = SDL_CreateThread( TestThread, (void *)NULL);
+
         if( NULL == thread )
            printf("\nSDL_CreateThread failed: %s\n", SDL_GetError());
         else
-           SDL_Delay(1000);
+        {
+           SDL_WaitThread( thread, &threadReturnValue);
+           printf("\nThread returned value:%d", threadReturnValue);
+        }
 
         return 1;
 }
@@ -64,7 +69,7 @@ int TestThread( void *ptr )
                 SDL_Delay(50);
         }
 
-        return 1;
+        return cnt;
 }
 ```
 ```
@@ -81,6 +86,7 @@ Thread counter: 6
 Thread counter: 7
 Thread counter: 8
 Thread counter: 9
+Thread returned value:10
 ```
 == Remarks ==
 *<br/>[[SDL_CreateThread]]() creates a new thread of execution that shares all of its parent's global memory, signal handlers, file descriptors, etc, and runs the function '''fn''', passing it the void pointer '''data'''.  The thread quits when '''fn''' returns. <br/>*
