--- a/SDL_DestroyMutex.mediawiki
+++ b/SDL_DestroyMutex.mediawiki
@@ -1,6 +1,9 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|}
+
 
 = SDL_DestroyMutex =
 Use this function to destroy a mutex.
@@ -10,23 +13,39 @@ Use this function to destroy a mutex.
 ```c++
 void SDL_DestroyMutex(SDL_mutex* mutex)
 ```
-
 == Function Parameters ==
 {|
-|'''mutex'''
-|^the mutex to destroy^
+|'''mutex''' 
+|^the mutex to destroy^ 
 |}
+
 
 == Code Examples ==
 ```c++
-You can add your code example here
-```
+SDL_mutex *mutex;
 
+//First create the mutex..
+mutex = SDL_CreateMutex();
+
+// ... use mutex in code
+
+
+// When done using the mutex, destroy it
+
+// MAKE sure to unlock the mutex prior to destroying it
+if( SDL_mutexV( mutex ) )
+  printf("\nSDL Mutex unlock error:%s", SDL_GetError());
+else
+  // When done with the mutex delete it
+  SDL_DestroyMutex( mutex );
+```
 == Remarks ==
-''You can add useful comments here''
+SDL_DestroyMutex must be called on any mutex that is no longer needed. Failure to destroy a mutex will result in a system memory or resource leak. While it is safe to destroy a mutex that is UNLOCKED, it is not safe to attempt to destroy a locked mutex and may result in undefined behavior depending on the platform.
+
+Any attempt to reference a mutex after it has been destroyed will cause access to an invalid memory pointer which may lead to memory corruption or a segmentation fault.
 
 == Related Functions ==
-:[[SDL_CreateMutex]] *
+: [[SDL_CreateMutex]] *
 
 ----
-[[CategoryAPI]], [[CategoryMutex]]
+[[CategoryAPI]], CategoryMutex
