--- a/SDL_GetThreadID.mediawiki
+++ b/SDL_GetThreadID.mediawiki
@@ -1,6 +1,9 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|}
+
 
 = SDL_GetThreadID =
 Use this function to get the thread identifier for the specified thread.
@@ -10,27 +13,27 @@ Use this function to get the thread identifier for the specified thread.
 ```c++
 SDL_threadID SDL_GetThreadID(SDL_Thread* thread)
 ```
-
 == Function Parameters ==
 {|
-|'''thread'''
-|^the desired/specified thread to query^
+|'''thread''' 
+|^The desired/specified thread to query^ 
 |}
 
+
 == Return Value ==
-Returns the ID of the specified thread.  <<Color2(green, What happens on error?)>>
+Returns the ID of the specified thread.  This thread identifier is as reported by the underlying operating system. If SDL is running on a platform that does not support threads the return value will always be zero.
+
+If the passed-in SDL_Thread pointer is NULL, this function will always return an SDL_threadID of zero.
 
 == Code Examples ==
 ```c++
-You can add your code example here
 ```
-
 == Remarks ==
-^This function is^ equivalent to [[SDL_ThreadID]]() if the specified thread is NULL.
+If the SDL thread pointer passed to this function is NULL, this function will return the SDL_ThreadID of the current thread.
 
 == Related Functions ==
-:[[SDL_CreateThread]] *
-:[[SDL_ThreadID]]
+: [[SDL_CreateThread]] *
+: [[SDL_ThreadID]]
 
 ----
-[[CategoryAPI]], [[CategoryThread]]
+[[CategoryAPI]], CategoryThread
