--- a/SDL_ThreadID.mediawiki
+++ b/SDL_ThreadID.mediawiki
@@ -1,6 +1,9 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|}
+
 
 = SDL_ThreadID =
 Use this function to get the thread identifier for the current thread.
@@ -10,21 +13,23 @@ Use this function to get the thread identifier for the current thread.
 ```c++
 SDL_threadID SDL_ThreadID(void)
 ```
-
 == Return Value ==
-Returns the ID of the current thread.  <<Color2(green,What happens on error?)>>
+Returns the ID of the current thread. This thread identifier is as  reported by the underlying operating system. If SDL is running on a  platform that does not support threads the return value will always be  zero.
 
 == Code Examples ==
 ```c++
-You can add your code example here
-```
 
+SDL_threadID  threadID;
+
+// Retrieve our current thread identifier
+threadID = SDL_ThreadID();
+```
 == Remarks ==
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_CreateThread]] ???
-:[[SDL_GetThreadID]]
+: [[SDL_CreateThread]] ???
+: [[SDL_GetThreadID]]
 
 ----
-[[CategoryAPI]], [[CategoryThread]]
+[[CategoryAPI]], CategoryThread
