--- a/SDL_CreateTexture.mediawiki
+++ b/SDL_CreateTexture.mediawiki
@@ -50,6 +50,7 @@ You can add your code example here
 == Related Functions ==
 :[[SDL_DestroyTexture]]
 :[[SDL_QueryTexture]]
+:[[SDL_UpdateTexture]]
 
 ----
 [[CategoryAPI]], [[CategoryRender]]
