--- a/SDL_GetNumDisplayModes.mediawiki
+++ b/SDL_GetNumDisplayModes.mediawiki
@@ -2,13 +2,19 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetNumDisplayModes =
-Use this function to return the number of available display modes for the current display.
+Use this function to return the number of available display modes.
 
 
 == Syntax ==
 ```c++
-int SDL_GetNumDisplayModes(void)
+int SDL_GetNumDisplayModes(int displayIndex)
 ```
+
+== Function Parameters ==
+{|
+|'''displayIndex'''
+|the index of the display to query
+|}
 
 == Return Value ==
 Returns a number >= 1 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
@@ -23,7 +29,6 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_GetDisplayMode]]
-:[[SDL_SelectVideoDisplay]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
