--- a/SDL_GetDesktopDisplayMode.mediawiki
+++ b/SDL_GetDesktopDisplayMode.mediawiki
@@ -2,16 +2,20 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetDesktopDisplayMode =
-Use this function to get information about the desktop display mode for the current display.
+Use this function to get information about the desktop display mode.
 
 
 == Syntax ==
 ```c++
-int SDL_GetDesktopDisplayMode(SDL_DisplayMode* mode)
+int SDL_GetDesktopDisplayMode(int              displayIndex
+                              SDL_DisplayMode* mode)
 ```
 
 == Function Parameters ==
 {|
+|'''displayIndex'''
+|the index of the display to query
+|-
 |'''mode'''
 |an [[SDL_DisplayMode]] structure filled in with the current display mode
 |}
@@ -30,7 +34,6 @@ You can add your code example here
 == Related Functions ==
 :[[SDL_GetCurrentDisplayMode]]
 :[[SDL_GetDisplayMode]]
-:[[SDL_SelectVideoDisplay]]
 :[[SDL_SetWindowDisplayMode]]
 
 ----
