--- a/SDL_GetClosestDisplayMode.mediawiki
+++ b/SDL_GetClosestDisplayMode.mediawiki
@@ -7,12 +7,16 @@ Use this function to get the closest match to the requested display mode.
 
 == Syntax ==
 ```c++
-SDL_DisplayMode* SDL_GetClosestDisplayMode(const SDL_DisplayMode* mode,
+SDL_DisplayMode* SDL_GetClosestDisplayMode(int                    displayIndex,
+                                           const SDL_DisplayMode* mode,
                                            SDL_DisplayMode*       closest)
 ```
 
 == Function Parameters ==
 {|
+|'''displayIndex'''
+|the index of the display to query
+|-
 |'''mode'''
 |an [[SDL_DisplayMode]] structure containing the desired display mode
 |-
@@ -34,7 +38,6 @@ The available display modes are scanned and '''closest''' is filled in with the 
 == Related Functions ==
 :[[SDL_GetDisplayMode]]
 :[[SDL_GetNumDisplayModes]]
-:[[SDL_SelectVideoDisplay]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
