--- a/SDL_HasSSE41.mediawiki
+++ b/SDL_HasSSE41.mediawiki
@@ -2,17 +2,17 @@
 <!-- pragma camelcase off -->
 '''DRAFT'''
 
-= SDL_HasSSE4 =
-Use this function to ,,return true if,, ^determine whether^ the CPU has SSE4 features.
+= SDL_HasSSE41 =
+Use this function to ,,return true if,, ^determine whether^ the CPU has SSE4.1 features.
 
 
 == Syntax ==
 ```c++
-SDL_bool SDL_HasSSE4(void)
+SDL_bool SDL_HasSSE41(void)
 ```
 
 == Return Value ==
-Returns SDL_TRUE if the CPU has SSE4 features or SDL_FALSE if not.
+Returns SDL_TRUE if the CPU has SSE4.1 features or SDL_FALSE if not.
 
 == Code Examples ==
 ```c++
@@ -26,6 +26,7 @@ You can add your code example here
 :[[SDL_HasSSE]]
 :[[SDL_HasSSE2]]
 :[[SDL_HasSSE3]]
+:[[SDL_HasSSE42]]
 
 ----
 [[CategoryAPI]], [[CategoryCPU]]
